--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cra-template-redux": "2.0.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "json-server": "^0.17.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^8.0.1",
